--- a/games page/games.html
+++ b/games page/games.html
@@ -21,68 +21,61 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <header>
         <h1>Games</h1>
+    </header>
 
     <main>
-        <section class="games-links">
-            <p class="link">// Game Links //</p>
-            <ul>
-                <li><a href="games/achive.html">Achievement Unlocked</a></li>
-                <li><a href="games/portal.html">Portal</a></li>
-                <li><a href="games/btd1.html">Bloons Tower Defense 1</a></li>
-                <li><a href="games/btd2.html">Bloons Tower Defense 2</a></li>
-                <li><a href="games/btd3.html">Bloons Tower Defense 3</a></li>
-                <li><a href="games/stick_rpg.html">Stick RPG</a></li>
-                <li><a href="games/mis.html">Missing in Space</a></li>
-                <li><a href="games/rythm-blaster.html">Rhythm Blaster</a></li>
-                <li><a href="games/rythm-rocket.html">Rhythm Rockets</a></li>
-                <li><a href="games/breakingbad.html">Breaking Bad for NDS</a></li>
-                <li><a href="games/smw.html">Super Mario World for SNES</a></li>
-                <li><a href="games/bcsds.html">Better Call Saul for NDS</a></li>
-                <li><a href="games/pkmn_fire.html">Pokemon Fire Red for GBA</a></li>
-                <li><a href="games/pkmn_leaf.html">Pokemon Leaf Green for GBA</a></li>
-                <li><a href="games/pkmn_ruby.html">Pokemon Ruby for GBA</a></li>
-                <li><a href="games/pkmn_sapphire.html">Pokemon Sapphire for GBA</a></li>
-                <li><a href="games/pkmn_emerald.html">Pokemon Emerald for GBA</a></li>
-                <li><a href="games/brain_math.html">Brain Age Math for DSi (DSiWare Test)</a></li>
-                <li><a href="games/one_chance.html">One Chance</a></li>
-                <li><a href="games/pkmn_crystal.html">pokemon crystal for gbc</a></li>
-                <li><a href="games/mario_rpg_seven.html">super mario rpg for snes</a></li>
-                <li><a href="games/impossible.html">impossible quiz</a></li>
-                <li><a href="games/smash_flash.html">super smash flash</a></li>
-            </ul>
-            <p class="link">// Game Links //</p>
-        </section>
+        <div class="links">
+            <!--games-->
+            <a href="games/achive.html">Achievement Unlocked</a>
+            <a href="games/portal.html">Portal</a>
+            <a href="games/btd1.html">Bloons Tower Defense 1</a>
+            <a href="games/btd2.html">Bloons Tower Defense 2</a>
+            <a href="games/btd3.html">Bloons Tower Defense 3</a>
+            <a href="games/stick_rpg.html">Stick RPG</a>
+            <a href="games/mis.html">Missing in Space</a>
+            <a href="games/rythm-blaster.html">Rhythm Blaster</a>
+            <a href="games/rythm-rocket.html">Rhythm Rockets</a>
+            <a href="games/breakingbad.html">Breaking Bad for NDS</a>
+            <a href="games/smw.html">Super Mario World for SNES</a>
+            <a href="games/bcsds.html">Better Call Saul for NDS</a>
+            <a href="games/pkmn_fire.html">Pokemon Fire Red for GBA</a>
+            <a href="games/pkmn_leaf.html">Pokemon Leaf Green for GBA</a>
+            <a href="games/pkmn_ruby.html">Pokemon Ruby for GBA</a>
+            <a href="games/pkmn_sapphire.html">Pokemon Sapphire for GBA</a>
+            <a href="games/pkmn_emerald.html">Pokemon Emerald for GBA</a>
+            <a href="games/brain_math.html">Brain Age Math for DSi (DSiWare Test)</a>
+            <a href="games/one_chance.html">One Chance</a>
+            <a href="games/pkmn_crystal.html">Pokemon Crystal for GBC</a>
+            <a href="games/mario_rpg_seven.html">Super Mario RPG for SNES</a>
+            <a href="games/impossible.html">Impossible Quiz</a>
+            <!--games-->
 
-        <section class="videos-links">
-            <h2>Strong Bad Email Collection</h2>
-            <p class="link">// Video Links //</p>
-            <ul>
-                <li><a href="games/sbemails1.html">Strong Bad Email #1</a></li>
-                <li><a href="games/sbemails2.html">Strong Bad Email #2</a></li>
-                <li><a href="games/sbemails3.html">Strong Bad Email #3</a></li>
-                <li><a href="games/sbemails4.html">Strong Bad Email #4</a></li>
-                <li><a href="games/sbemails5.html">Strong Bad Email #5</a></li>
-                <li><a href="games/sbemails6.html">Strong Bad Email #6</a></li>
-                <li><a href="games/sbemails7.html">Strong Bad Email #7</a></li>
-                <li><a href="games/sbemails8.html">Strong Bad Email #8</a></li>
-                <li><a href="games/sbemails9.html">Strong Bad Email #9</a></li>
-                <li><a href="games/sbemails10.html">Strong Bad Email #10</a></li>
-                <li><a href="games/sbemails11.html">Strong Bad Email #11</a></li>
-                <li><a href="games/sbemails12.html">Strong Bad Email #12</a></li>
-                <li><a href="games/sbemails13.html">Strong Bad Email #13</a></li>
-                <li><a href="games/sbemails14.html">Strong Bad Email #14</a></li>
-                <li><a href="games/sbemails15.html">Strong Bad Email #15</a></li>
-                <li><a href="games/sbemails16.html">Strong Bad Email #16</a></li>
-                <li><a href="games/sbemails17.html">Strong Bad Email #17</a></li>
-                <li><a href="games/sbemails18.html">Strong Bad Email #18</a></li>
-                <li><a href="games/sbemails19.html">Strong Bad Email #19</a></li>
-                <li><a href="games/sbemails20.html">Strong Bad Email #20</a></li>
-                <li><a href="games/sbemails58.html">Strong Bad Email #58 (Trogdor)</a></li>
-            </ul>
-            <p class="link">// Video Links //</p>
-        </section>
+                <!--strong bad emails-->
+                <a href="games/sbemails1.html">Strong Bad Email #1</a>
+                <a href="games/sbemails2.html">Strong Bad Email #2</a>
+                <a href="games/sbemails3.html">Strong Bad Email #3</a>
+                <a href="games/sbemails4.html">Strong Bad Email #4</a>
+                <a href="games/sbemails5.html">Strong Bad Email #5</a>
+                <a href="games/sbemails6.html">Strong Bad Email #6</a>
+                <a href="games/sbemails7.html">Strong Bad Email #7</a>
+                <a href="games/sbemails8.html">Strong Bad Email #8</a>
+                <a href="games/sbemails9.html">Strong Bad Email #9</a>
+                <a href="games/sbemails10.html">Strong Bad Email #10</a>
+                <a href="games/sbemails11.html">Strong Bad Email #11</a>
+                <a href="games/sbemails12.html">Strong Bad Email #12</a>
+                <a href="games/sbemails13.html">Strong Bad Email #13</a>
+                <a href="games/sbemails14.html">Strong Bad Email #14</a>
+                <a href="games/sbemails15.html">Strong Bad Email #15</a>
+                <a href="games/sbemails16.html">Strong Bad Email #16</a>
+                <a href="games/sbemails17.html">Strong Bad Email #17</a>
+                <a href="games/sbemails18.html">Strong Bad Email #18</a>
+                <a href="games/sbemails19.html">Strong Bad Email #19</a>
+                <a href="games/sbemails20.html">Strong Bad Email #20</a>
+                <a href="games/sbemails58.html">Strong Bad Email #58 (Trogdor)</a>
+                <!--strong bad emails-->
+            </div>
     </main>
 </body>
 </html>
