--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <link rel="stylesheet" href="home page/home.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎄 Geared Games 🎄</title>
+    <title>Geared Games</title>
 </head>
 <body>
     <div class="content">
-        <h1>Welcome to Geared Games! 🎅</h1>
+        <h1>Welcome to Geared Games!</h1>
         <h2>Requests Completed: 4</h2>
-        <h2>Version 1.4</h2>
+        <h2>Version 1.4.5</h2>
+        <p>sorry for long time for updates i am working on a big project (its a game...)</p>
         <div class="links">
             <a href="games page/games.html"><h6>Games</h6></a>
             <a href="backups/backups.html"><h6>Website Backups</h6></a>
