--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Welcome to Geared Games!</h1>
         <h2>Requests Completed: 4</h2>
         <h2>Version 1.4.5</h2>
-        <p>sorry for long time for updates i am working on a big project (its a game...)</p>
+        <p>sorry for long time for updates i am working on a big project (its a game....)</p>
         <div class="links">
             <a href="games page/games.html"><h6>Games</h6></a>
             <a href="backups/backups.html"><h6>Website Backups</h6></a>
