idfk i was boerd

--- a/index.html
+++ b/index.html
@@ -19,5 +19,24 @@
             <a href="game request page/request_main.html"><h6>Request a Game!</h6></a>
         </div>
     </div>
+<div class="container">
+    <div class="container_terminal"></div>
+    <div class="terminal_toolbar">
+        <div class="butt">
+            <button class="btn btn-color"></button>
+            <button class="btn"></button>
+            <button class="btn"></button>
+        </div>
+        <p class="user">IMPORTANT INFO</p>
+    </div>
+    <div class="terminal_body">
+        <div class="terminal_promt">
+            <span class="terminal_user">pyromania:</span>
+            <span class="terminal_location"></span>
+            <span class="terminal_bling">Hope you enjoy!</span>
+            <span class="terminal_cursor"></span>
+        </div>
+    </div>
+</div>
 </body>
 </html>
